--- a/themes/openy_themes/openy_lily/sass/misc/_ccc.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_ccc.scss
@@ -74,7 +74,7 @@
       display: list-item;
       font-weight: bold;
       font-size: 18px;
-      font-family: 'Cachet', Helvetica, Arial, sans-serif;
+      font-family: "Cachet", Verdana, Geneva, sans-serif;
       float: left;
       width: 80%;
     }
