--- a/themes/openy_themes/openy_lily/sass/misc/_footer.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_footer.scss
@@ -5,7 +5,7 @@
 }
 
 #page-footer {
-  background: #fff;
+  background: $white;
   padding-top: 40px;
   padding-bottom: 14px;
   #block-openy-lily-footersocialblock {
@@ -76,7 +76,7 @@
       top: -20px;
     }
     p {
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: "Cachet", Verdana, Geneva, sans-serif;
       display: inline-block;
       margin: 0;
       font-size: 13px;
