--- a/themes/openy_themes/openy_lily/sass/misc/_forms.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_forms.scss
@@ -6,7 +6,7 @@
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
   text-transform: uppercase;
   font-weight: bold;
-  font-family: 'Cachet', Helvetica, Arial, sans-serif;
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
   border-radius: 3px;
   line-height: 1.33;
   text-align: center;
@@ -132,11 +132,11 @@ input, textarea {
 }
 
 label {
-  font-family: 'Cachet';
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
 }
 
 .fieldset-legend {
-  font-family: 'Cachet';
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
   color: $purple;
   font-weight: bold;
   text-transform: uppercase;
@@ -170,7 +170,7 @@ label {
       color: #a94442;
       background-color: #f2dede;
       border: 1px solid #ebccd1;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: "Cachet", Verdana, Geneva, sans-serif;
     }
   }
   .path-account & {
@@ -205,14 +205,14 @@ label {
 
 .openy-ccc-login-form,
 .openy-ccc-registration-form {
-  font-family: 'Cachet';
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
 }
 
 #edit-intro-text {
   font-size: 16px;
   line-height: 1.6em;
   color: #636466;
-  font-family: 'Cachet';
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
   font-weight: 400;
   font-style: normal;
   margin-bottom: .7em;
@@ -336,6 +336,11 @@ legend {
     padding-right: 10px;
     width: 50%;
     float: left;
+    @include breakpoint (0 767px) {
+      width: 100%;
+      float: none;
+    }
+
   }
 }
 
@@ -352,6 +357,10 @@ legend {
       padding-right: 10px;
       width: 50%;
       float: left;
+      @include breakpoint (0 767px) {
+        width: 100%;
+        float: none;
+      }
     }
   }
 }
@@ -545,7 +554,7 @@ legend {
   padding: 13px 25px;
   font-size: 16px !important;
   border-radius: 3px;
-  font-family: "Cachet W01 Book", 'Ubuntu Condensed', sans-serif;
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
   font-weight: bold;
   text-transform: capitalize;
 }
