--- a/themes/openy_themes/openy_lily/sass/misc/_membership.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_membership.scss
@@ -329,7 +329,7 @@
               width: auto;
               display: inline-block;
               color: #fff;
-              font-family: Cachet;
+              font-family: 'Cachet', Verdana, Geneva, sans-serif;
               border-radius: 4px;
               outline: 0 !important;
               position: relative;
@@ -352,7 +352,7 @@
               width: auto;
               display: inline-block;
               color: #fff;
-              font-family: Cachet;
+              font-family: 'Cachet', Verdana, Geneva, sans-serif;
               border-radius: 4px;
               outline: 0 !important;
               position: relative;
@@ -602,7 +602,7 @@
               width: auto;
               display: inline-block;
               color: #fff;
-              font-family: Cachet;
+              font-family: 'Cachet', Verdana, Geneva, sans-serif;
               border-radius: 4px;
               outline: 0 !important;
               position: relative;
@@ -624,7 +624,7 @@
               width: auto;
               display: inline-block;
               color: #fff;
-              font-family: Cachet;
+              font-family: 'Cachet', Verdana, Geneva, sans-serif;
               border-radius: 4px;
               outline: 0 !important;
               position: relative;
