--- a/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -215,7 +215,7 @@
     line-height: 1.1em;
     margin: 20px 0 10px;
     color: white;
-    font-family: 'Cachet';
+    font-family: 'Cachet', Verdana, Geneva, sans-serif;
     @include breakpoint(0 $tablet-start) {
       font-size: 40px;
     }
@@ -369,7 +369,7 @@
       }
       p {
         font-size: 24px;
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-family: "Cachet", Verdana, Geneva, sans-serif;
       }
     }
   }
@@ -429,8 +429,11 @@
     color: #5e5e5e;
     font-weight: bold;
     font-size: 34px;
-    font-family: 'Cachet', Helvetica, Arial, sans-serif;
+    font-family: 'Cachet', Verdana, Geneva, sans-serif;
     text-transform: uppercase;
+    @include breakpoint (0 $tablet-start) {
+      font-size: 28px;
+    }
   }
   p {
     font-size: 21px;
@@ -457,7 +460,7 @@
       }
       a {
         font-weight: bold;
-        font-family: 'Cachet', Helvetica, Arial, sans-serif;
+        font-family: 'Cachet', Verdana, Geneva, sans-serif;
       }
     }
   }
@@ -486,7 +489,7 @@
     padding: 10px 15px;
     border-bottom: 1px solid transparent;
     font-weight: bold;
-    font-family: 'Cachet';
+    font-family: 'Cachet', Verdana, Geneva, sans-serif;
   }
   .field-answer {
     display: none;
@@ -531,5 +534,11 @@
         max-height: none;
       }
     }
+  }
+}
+
+.field-prgf-grid-clm-description {
+  table {
+    max-width: 100%;
   }
 }
