--- a/themes/openy_themes/openy_lily/sass/global/_fonts.scss
+++ b/themes/openy_themes/openy_lily/sass/global/_fonts.scss
@@ -44,7 +44,7 @@
 }
 
 @mixin cachet() {
-  font-family: "Cachet", Arial, sans-serif;
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
   letter-spacing: -0.025em;
 }
 
@@ -60,12 +60,12 @@
 
 body {
   -webkit-font-smoothing: antialiased;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Verdana, Geneva, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-weight: bold;
-  font-family: 'Cachet', Helvetica, Arial, sans-serif;
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
 }
 
 h1, .h1 {
