--- a/themes/openy_themes/openy_lily/sass/misc/_program.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_program.scss
@@ -26,7 +26,7 @@
     .field-program-description {
       font-size: 14px;
       line-height: 20px;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: "Cachet", Verdana, Geneva, sans-serif;
     }
   }
 }
