--- a/themes/openy_themes/openy_rose/templates/block/block--openy-rose-branding.html.twig
+++ b/themes/openy_themes/openy_rose/templates/block/block--openy-rose-branding.html.twig
@@ -17,7 +17,7 @@
 #}
 {% block content %}
   {% if site_logo %}
-    <a href="{{ path('<front>') }}" title="{{ 'Go to the homepage'|t }}" rel="home">
+    <a class="site-logo" href="{{ path('<front>') }}" title="{{ 'Go to the homepage'|t }}" rel="home">
       <img class="logo" src="{{ site_logo }}" alt="{{ 'Site-logo'|t }}" />
       <img class="aof" src="{{ base_path }}{{ directory }}/img/aof.svg" alt="{{ 'For Youth Development, For Healthy Living, For Social Responsibility'|t }}"/>
     </a>
