[YTCDN-65] On the search form make village and capacity filters refresh the page results without a full page reload

--- a/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-results-calendar.html.twig
+++ b/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-results-calendar.html.twig
@@ -6,7 +6,7 @@
  * @ingroup themeable
  */
 #}
-<div class="cdn-calendar-list-row{% if data.is_booked %} booked{% endif %}" data-id="{{ data.id }}" data-pid="{{ data.pid }}">
+<div class="cdn-calendar-list-row{% if data.is_booked %} booked{% endif %}" data-id="{{ data.id }}" data-pid="{{ data.pid }}" data-total_capacity="{{ data.total_capacity }}" data-village_id="{{ data.village_id }}">
   <a href="#" class="{% if data.is_selected %}selected{% endif %}">
     <div class="date">
       <div class="month">{{ data.date1 }}</div>
